# netests

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  Untitled Diagram.drawio  main.py  mkdocs.yml  netests.py  netests.yml  output.txt  pylama.ini  pyproject.toml  requirements.txt  setup.py
base/: __init__.py  base_device.py  compare.py  device_base.py
class/: bgp.py
const/: constants.py  netbox_const.py
data/: network.graffle  nexus_bck.cfg  test.json
docs/: arguments.md  cli.md  conf.py  configuration.md  contact.md  contribute.md  contributors.md  contributors_and_maintainers.md  data_models.md  device_used.md  divers.md  get_started.md  index.md  index.rst  installation.md  introduction.md  inventory.md  license.md  netests_cli.md  protocols.md  protocols_arguments.md  release.md  roadmap.md  run.md  source_of_truth.md  troubleshooting.md  vendors_and_protocols.md  verbose.md  youtube.md
exceptions/: netests_exceptions.py  netests_iosxr_exceptions.py
features/: bgp_tests.feature  ipv4_tests.feature  ipv6_tests.feature  lldp_tests.feature  mlag_tests.feature  mtu_tests.feature  ospf_tests.feature  run_behave.sh  run_syntax.sh  run_tests.sh  static_tests.feature  verbose.feature
functions/: base_cli.py  base_init_data.py  base_run.py  base_selection.py  bgp_compare.py  bgp_converters.py  bgp_gets.py  bgp_reports.py  cli_tools.py  global_tools.py  http_request.py  mappings.py  netconf_tools.py  retrieve_bgp.py  select_vars.py  verbose_mode.py  worker.py
group_vars/: spine.yml
host_vars/: leaf02.yml  leaf03.yml  spine01.yml
inventory/: groups.yml  hosts  hosts.yml  hosts_virtual
netbox/: add_devices.py
netests/: __init__.py  base_cli.py  base_init_data.py  (+10 more)
(+1250 files in other folders)
